--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,4 @@
+/* Universal Styles */
 *,
 body,
 html {
@@ -6,5 +7,17 @@ html {
     line-height: 1.3;
 }
 
+.gradient-background {
+    position: absolute;
+    z-index: -99;
+    width: 100vw;
+}
+
+.mux-logo {
+    position: fixed;
+    width: 8%;
+    height: auto;
+
+}
 
 
