--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,6 @@ html {
     line-height: 1.3;
 }
 
-<<<<<<< Updated upstream
 .gradient-background {
     position: absolute;
     z-index: -99;
@@ -16,13 +15,14 @@ html {
 
 .mux-logo {
     position: fixed;
-    width: 8%;
+    width: 5%;
     height: auto;
+    top: 20px;
+    left: 20px;
 
 }
 
 
-=======
 #menu__toggle {
     opacity: 0;
   }
@@ -94,4 +94,3 @@ html {
   .menu__item:hover {
     background-color: #CFD8DC;
   }
->>>>>>> Stashed changes
