--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,7 +43,7 @@ html {
   .menu__btn {
     position: fixed;
     top: 20px;
-    left: 20px;
+    right: 20px;
     width: 26px;
     height: 26px;
     cursor: pointer;
