--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,83 +14,120 @@ html {
 
 .mux-logo {
     position: fixed;
-    width: 5%;
+    width: 50px;
     height: auto;
     top: 20px;
     left: 20px;
-
 }
 
-
-#menu__toggle {
+/* Burger menu */
+#menu-toggle {
     opacity: 0;
   }
-  #menu__toggle:checked + .menu__btn > span {
+  
+  #menu-toggle:checked + .menu-btn > span {
     transform: rotate(45deg);
   }
-  #menu__toggle:checked + .menu__btn > span::before {
+
+  #menu-toggle:checked + .menu-btn > span::before {
     top: 0;
     transform: rotate(0deg);
   }
-  #menu__toggle:checked + .menu__btn > span::after {
+
+  #menu-toggle:checked + .menu-btn > span::after {
     top: 0;
     transform: rotate(90deg);
   }
-  #menu__toggle:checked ~ .menu__box {
-    left: 0 !important;
+
+  #menu-toggle:checked ~ .menu-box {
+    right: 0 !important;
+    opacity: 1;
   }
-  .menu__btn {
+
+  .menu-btn {
     position: fixed;
-    top: 20px;
+    top: 40px;
     right: 20px;
     width: 26px;
     height: 26px;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
   }
-  .menu__btn > span,
-  .menu__btn > span::before,
-  .menu__btn > span::after {
+  
+  .menu-btn > span,
+  .menu-btn > span::before,
+  .menu-btn > span::after {
     display: block;
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: #616161;
+    background-color: white;
     transition-duration: .25s;
   }
-  .menu__btn > span::before {
+
+  .menu-btn > span::before {
     content: '';
     top: -8px;
   }
-  .menu__btn > span::after {
+
+  .menu-btn > span::after {
     content: '';
     top: 8px;
   }
-  .menu__box {
+
+  .menu-box {
+    opacity: 0;
     display: block;
     position: fixed;
-    top: 0;
-    left: -100%;
-    width: 300px;
+    
+    top: 0%;
+    right: -100%;
+    width: 100%;
     height: 100%;
     margin: 0;
     padding: 80px 0;
     list-style: none;
-    background-color: #ECEFF1;
+    background-color: #AADDFF;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
     transition-duration: .25s;
   }
-  .menu__item {
+
+  .menu-item {
     display: block;
+    text-align: center;
+    text-transform: uppercase;
     padding: 12px 24px;
-    color: #333;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    color: white;
+    font-size: 3rem;
     font-weight: 600;
     text-decoration: none;
     transition-duration: .25s;
   }
-  .menu__item:hover {
-    background-color: #CFD8DC;
+  
+  .menu-item:hover {
+    background-color: #88ccf9;
   }
   
+  .test {
+    position: fixed;
+    left: 0%;
+    top: 0%;
+    right: 0%;
+    bottom: 0%;
+    z-index: 0;
+    display: none;
+    overflow: visible;
+    background-color: #262626;
+    opacity: 0.35;
+  }
+
+
+@media only screen and (min-width: 700px) {
+    .menu-box {
+      width: 60%;
+    }
+
+    #menu-toggle:checked ~ .test {
+      display: block;
+    }
+}
