--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,6 +23,7 @@ html {
 /* Burger menu */
 #menu-toggle {
     opacity: 0;
+    display: none;
   }
   
   #menu-toggle:checked + .menu-btn > span {
@@ -121,6 +122,13 @@ html {
     z-index: 100;
   }
 
+   .aftermovie {
+    position: absolute;
+    bottom: 10%;
+    right: 5%;
+    width: 40%;
+  }
+
   .svg-container {
     position: absolute;
     top: 100px;
@@ -205,16 +213,33 @@ html {
   /* Sektion om Mux */
 
   .om-mux {
-    overflow: hidden;
+    height: 99vh;
+    /* background-color: black; */
+  }
+
+  .om-mux-wrapper {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    background-color: white;
+    z-index: 2;
+    height: 80vh;
   }
 
-  .om-mux svg {
+  .mux-logo-med-streger {
+    width: 20%;
+  }
+
+  #svg1 {
     position: relative;
-    width: 40%;
+    top: 0;
+    left: 0;
   }
 
+  #svg2 {
+    position: relative;
+
+  }
   
 @media only screen and (min-width: 700px) {
     .menu-box {
