--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,7 +41,7 @@ html {
   }
 
   #menu-toggle:checked ~ .menu-box {
-    right: 0 !important;
+    right: 0;
     opacity: 1;
   }
 
@@ -87,18 +87,19 @@ html {
     margin: 0;
     padding: 80px 0;
     list-style: none;
-    background-color: #AADDFF;
+    background-image: linear-gradient(to right, #F9C22E, #F15946);
     box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
     transition-duration: .25s;
     z-index: 100;
   }
 
   .menu-item {
-    display: block;
+    display: flex;
+    justify-content: center;
     text-align: center;
     text-transform: uppercase;
     padding: 12px 24px;
-    color: white;
+    color: #fff;
     font-size: 3rem;
     font-weight: 600;
     text-decoration: none;
@@ -106,7 +107,7 @@ html {
   }
   
   .menu-item:hover {
-    background-color: #88ccf9;
+    background-color: rgb(221, 83, 48);
   }
   
   .grey-box {
@@ -120,6 +121,51 @@ html {
     background-color: #262626;
     opacity: 0.35;
     z-index: 100;
+  }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
+  }
+
+  .button {
+    background-color: rgb(126, 110, 110);
+    border: 0;
+    color: #fff;
+    font-size: 2rem;
+    text-align: center;
+    width: 80%;
+    font-weight: 800;
+    padding: 10px 0;
+    border-radius: 100px/100px;
+
+  }
+
+  .bouncy {
+    animation:bouncy 5s infinite linear;
+    position:relative;
+  }
+
+  @keyframes bouncy {
+    0%{top:0em}
+    40%{top:0em}
+    43%{top:-0.9em}
+    46%{top:0em}
+    48%{top:-0.4em}
+    50%{top:0em}
+    100%{top:0em;}
+  }
+
+  .some-container {
+    margin: 20% 15% 0;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .some-img {
+    width: 45px;
+    height: 45px;
   }
 
    .aftermovie {
@@ -250,3 +296,6 @@ html {
       display: block;
     }
 }
+
+/* Test button */
+
