--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,20 +6,40 @@ html {
     line-height: 1.3;
 }
 
+header {
+  overflow: hidden;
+}
+
 .gradient-background {
     position: relative;
     z-index: -99;
-    width: 100vw;
+    width: 120vw;
+    top: 0;
+    left: 0;
 }
 
-.mux-logo {
+#mux-logo {
     position: fixed;
     width: 50px;
     height: auto;
     top: 20px;
     left: 20px;
+    z-index: 2000;
 }
 
+.frivillig-btn {
+  position: absolute;
+  z-index: 1000;
+  top: 3%;
+  right: 7%;
+  border: 3px solid #eef0f6;
+  border-radius: 10px;
+  padding: 5px 6px;
+  text-decoration: none;
+  color: #eef0f6;
+  font-weight: bold;
+  text-transform: uppercase;
+}
 /* Burger menu */
 #menu-toggle {
     opacity: 0;
@@ -170,9 +190,10 @@ html {
 
    .aftermovie {
     position: absolute;
-    bottom: 10%;
+    top: 18%;
     right: 5%;
     width: 40%;
+    display: none;
   }
 
   .svg-container {
@@ -259,20 +280,35 @@ html {
   /* Sektion om Mux */
  .om-mux {
    display: flex;
-   justify-content: space-around;
+   justify-content: space-evenly;
    align-items: center;
-   padding: 50px;
+   flex-wrap: wrap;
+   padding: 50px 0;
+   width: 100vw;
  }
 
 .mux-logo-streger {
-  width: 15%;
+  width: 100%;
+}
+
+.mux-streger-container {
+  display: none;
 }
 
 .box {
   display: flex;
   flex-direction: column;
   align-items: center ;
-  max-width: 20%;
+  max-width: 400px;
+  min-width: 400px;
+}
+
+.box:nth-child(1) {
+  margin-bottom: 50px;
+}
+
+.om-mux > div{
+  width: 20%;
 }
 
 .box > p {
@@ -326,6 +362,17 @@ html {
     background-color: rgba(0, 0, 0, 0.236);
   }
 
+  .animation {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: 1000ms;
+  }
+
+ .animation.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
   .img {
     background-image: url(../Media/Images/pexels-photo-1763075-2.webp);
     background-size: cover;
@@ -337,13 +384,58 @@ html {
     border-radius: 20px;
     position: relative;
     margin: 50px;
+  }   
+
+  .floatup-one {
+    opacity: 0;
+    transform: translateY(500px);
+    transition: 2s;
   }
+
+  .floatup-one.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  .floatup-two {
+    opacity: 0;
+    transform: translateY(500px);
+    transition: 3s;
+  }
+
+  .floatup-two.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  .floatup-three {
+    opacity: 1;
+    transform: translateY(300px);
+    transition: 1.5s;
+  }
+
+  .floatup-three.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  .floatup-four {
+    opacity: 1;
+    transform: translateY(400px);
+    transition: 2s;
+  }
+
+  .floatup-four.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
 
   #lower-img {
     margin-top: 100px;
   }
   
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 800px) {
     .menu-box {
       width: 60%;
     }
@@ -351,7 +443,225 @@ html {
     #menu-toggle:checked ~ .grey-box {
       display: block;
     }
+
+    .box:nth-child(1) {
+      margin-bottom: 0px;
+    }
+
 }
+
+@media only screen and (min-width: 500px) {
+  .aftermovie {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+
+  .mux-streger-container{
+    display: block;
+  }
+
+}
+
 
 /* Test button */
 
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 50px;
+  height: 300px
+}
+
+.designet-af-class:hover{
+  color: #F15946;
+  text-decoration: underline;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap");
+
+.card {
+  background-color: #eef0f6;
+  font-family: "Source Sans Pro", sans-serif;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 0 0.4px 3.6px rgba(0, 0, 0, 0.004),
+    0 1px 8.5px rgba(0, 0, 0, 0.01), 0 1.9px 15.7px rgba(0, 0, 0, 0.019),
+    0 3.4px 28.2px rgba(0, 0, 0, 0.03), 0 6.3px 54.4px rgba(0, 0, 0, 0.047),
+    0 15px 137px rgba(0, 0, 0, 0.07);
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 800px;
+  height: 280px ;
+  z-index: 300;
+}
+
+.info > div > a {
+  color: #0060f6;
+  text-decoration: none;
+}
+
+.gem-popup {
+  display: none;
+}
+.top {
+  background-color: #eee;
+  border-radius: 20px;
+  margin: 16px 0;
+  width: 260px;
+}
+.text {
+  box-sizing: border-box;
+  padding: 0 20px 20px;
+  width: 100%;
+}
+.title {
+  justify-content: center;
+  text-transform: uppercase;
+  align-items: center;
+  display: flex;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 10px;
+  position: relative;
+  font-family: 'Prompt';
+}
+.tooltip {
+  font-size: 16px;
+  font-weight: normal;
+  margin-top: 2px;
+  position: relative;
+}
+.tooltip:hover {
+  cursor: help;
+}
+.tooltip-spacing {
+  height: 20px;
+  margin: 8px;
+  position: relative;
+  width: 20px;
+}
+.tooltip-bg1 {
+  background-color: #0060f6;
+  border-radius: 10px;
+  content: " ";
+  display: flex;
+  height: 20px;
+  position: absolute;
+  top: 0;
+  width: 20px;
+}
+.tooltip-bg2 {
+  background-color: #fff;
+  border-radius: 8px;
+  content: " ";
+  display: flex;
+  height: 16px;
+  left: 2px;
+  position: absolute;
+  top: 2px;
+  width: 16px;
+}
+.tooltip-text {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 20px;
+  position: relative;
+  text-align: center;
+  width: 20px;
+  color: #0060f6;
+}
+.info {
+  color: #262626;
+  display: flex;
+  justify-content: space-around;
+}
+.popup-bg {
+  filter: drop-shadow(0 3px 6px rgba(0, 0, 0, 0.16))
+    drop-shadow(0 3px 6px rgba(0, 0, 0, 0.23));
+  position: absolute;
+  top: -126px;
+}
+.popup-outline {
+  position: absolute;
+  top: -126px;
+}
+.popup-text {
+  border-radius: 12px;
+  box-sizing: border-box;
+  color: #fff;
+  font-size: 16px;
+  font-weight: normal;
+  left: 8px;
+  opacity: 0;
+  padding: 12px 16px;
+  position: absolute;
+  top: -117px;
+  transition: opacity 240ms 120ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 292px;
+}
+.tooltip:hover ~ .popup-text {
+  display: block;
+}
+.popup-bg {
+  opacity: 0;
+  transition: opacity 240ms 120ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.popup-outline-left {
+  stroke-dasharray: 0 426px;
+  stroke-dashoffset: 1px;
+  transition: stroke-dasharray 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.popup-outline-right {
+  stroke-dasharray: 352px 352px;
+  stroke-dashoffset: -352px;
+  transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.tooltip:hover ~ .popup-text {
+  opacity: 1;
+}
+.tooltip:hover ~ .popup-bg {
+  opacity: 1;
+  transition: opacity 240ms 120ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.tooltip:hover ~ .popup-outline .popup-outline-left {
+  stroke-dasharray: 426px 426px;
+  transition: stroke-dasharray 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.tooltip:hover ~ .popup-outline .popup-outline-right {
+  stroke-dashoffset: 0;
+  transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buttons {
+  display: flex;
+  margin-top: 8px;
+  width: 100%;
+  justify-content: center;
+}
+.button-primary {
+  align-items: center;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  height: 50px;
+  justify-content: center;
+  margin: 10px;
+  width: 50%;
+}
+
+.button-primary {
+  background-color: #0060f6;
+  color: #fff;
+}
+
+.button-primary:hover{
+  background-color: #024bbf;
+}
+
+.designet-af-class:hover {
+  cursor: pointer;
+}
